--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2020 Diego Urrutia-Astorga <durrutia@ucn.cl>.
+ * Copyright (c) 2020 Pablo-Castillo <pablo.castillo01@alumnos.ucn.cl>.
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -27,5 +27,12 @@ plugins {
 }
 
 dependencies {
+
+    // ORM Lite
+    implementation 'com.j256.ormlite:ormlite-core:5.1'
+    implementation 'com.j256.ormlite:ormlite-jdbc:5.1'
+
+    // Database driver
+    implementation 'com.h2database:h2:1.4.200'
 
 }
